- 
    Bug 
- 
    Resolution: Done
- 
    P4: Low 
- 
    5.0.0 Beta 1
- 
        484cfd8774638c3787846476b3a1ed7d46331ae2
Both in QDeclarativeItem and QQuickItem classes the "transformOriginPoint" property is read-only. However, a setter method already exists, and a notify signal would be trivial to implement. Is there some reason why this property is not writeable from QML and lacks a notify signal?
In Qt 4.8 it's fairly easy to workaround this by subclassing and reimplementing the itemChange() virtual function to be notified of when the transformation origin point changes, but it seems that QQuickItem::itemChange() method doesn't provide that information anymore.
So, I would suggest that:
- the property be made writeable
- a transformOriginPointChange() signal is emitted when appropriate
- relates to
- 
                    QTBUG-75486 BoundaryRule can only transform an Item around its transformOrigin -         
- Reported
 
-         
- resulted in
- 
                    QTBUG-63504 Mouse Click not working for setRotation with setTransformOriginPoint other than MidPoint -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-26423 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 248921,5 | Deprecate Item.transformOrigin, replace with transformOriginPoint | dev | qt/qtdeclarative | Status: NEW | -1 | 0 | 
| 37460,1 | transformOriginPoint is deprecated | master | qt/qtdeclarative | Status: ABANDONED | 0 | 0 | 
| 37461,1 | transformOriginPoint is deprecated | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |