transformOriginPoint is deprecated

Task-number: QTBUG-26423
Change-Id: I28f8160c2c52f62ef901ed569b94fefdab387729
Reviewed-by: Alan Alpert <416365416c@gmail.com>